# esp32_lora_gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  code-format.sh  partition_table.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/inc/app/: app_config.h  app_mngr.h  app_types.h  lora_manager.h  mqtt_mngr.h  provisioning_manager.h  wifi_mngr.h
src/app/src/: app_mngr.c  app_mngr.cpp  lora_manager.c  mqtt_mngr.c  provisioning_manager.c  wifi_mngr.c
src/common/: CMakeLists.txt
src/common/inc/common/: types.h
src/core/: CMakeLists.txt
src/core/inc/core/: core_includes.h  core_tasks.h  cryption_mngr.h  file_mngr.h  sx127x.h  utils.h
src/core/src/: cryption_mngr.c  file_mngr.c  sx127x.c  utils.c
src/test/: CMakeLists.txt  testClass.cpp  testClass.h  testClass_test.cpp
tools/: format.sh
